# grove

./: .gitignore  CLAUDE.md  CLAUDE_NOTES.md  Cargo.toml  Makefile  README.md  grove.service  thinking-canvas-v4.jsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  NewDoc.jsx  api.js  main.jsx
frontend/src/components/: ChatBox.jsx  DocumentPane.jsx  HeartbeatControls.jsx  PersonalityPanel.jsx  SettingsPanel.jsx  ThinkingCanvas.jsx
frontend/src/styles/: index.css
src/: api.rs  db.rs  llm.rs  main.rs  models.rs
